Fix spacing issue with loader and heading

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -10,7 +10,7 @@ main, header {
 }
 
 .app-logo img {
-  width: 500px;
+  width: 450px;
   max-width: 80vw;
 }
 
